remove lastresulthash from state
